@@ -114,6 +114,9 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <compilerArgument>
+                        --add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED
+                    </compilerArgument>
                 </configuration>
             </plugin>
 
